--- a/index.html
+++ b/index.html
@@ -3,153 +3,169 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Interface with Media Player and Tuners</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.16.13/antd.min.css">
+    <title>S E V E N ISO Player</title>
     <style>
         body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #1a1a1a;
+            color: #fff;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
             margin: 0;
-            padding: 20px;
+        }
+        .player {
             display: flex;
             flex-direction: column;
             align-items: center;
-        }
-        .lab-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-        }
-        .tuner-container {
-            background: #fff;
+            background: #333;
+            padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            text-align: center;
-            width: 150px;
+            position: relative;
         }
-        .media-player {
+        .controls {
+            display: flex;
+            justify-content: center;
             margin-top: 20px;
-            width: 80%;
-            max-width: 600px;
         }
-        .sync-button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 1em;
-            color: #fff;
-            background: #28a745;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .tuner-button {
-            margin-top: 10px;
-            padding: 5px 10px;
-            font-size: 0.9em;
-            color: #fff;
+        .button {
             background: #007bff;
             border: none;
+            color: #fff;
+            padding: 10px 20px;
+            margin: 0 10px;
             border-radius: 5px;
             cursor: pointer;
+        }
+        .button:hover {
+            background: #0056b3;
+        }
+        .loader {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #3498db;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 2s linear infinite;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: none;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .equalizer {
+            display: flex;
+            align-items: flex-end;
+            height: 100px;
+            width: 200px;
+            margin-top: 20px;
+        }
+        .bar {
+            width: 10px;
+            height: 50px;
+            background-color: red;
+            margin: 0 2px;
+            animation: bounce 1s infinite ease-in-out;
+        }
+        @keyframes bounce {
+            0%, 100% {
+                transform: scaleY(1);
+            }
+            50% {
+                transform: scaleY(0.5);
+            }
         }
     </style>
 </head>
 <body>
+    <div class="player">
+        <h1>S E V E N ISO Player</h1>
+        <audio id="audio" controls loop>
+            <source src="your-audio-file.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+        <div class="controls">
+            <button class="button" onclick="playAudio()">Play</button>
+            <button class="button" onclick="pauseAudio()">Pause</button>
+            <input type="file" id="fileInput" multiple onchange="handleFiles(this.files)">
+        </div>
+        <div class="loader" id="loader"></div>
+        <div class="equalizer" id="equalizer">
+            <div class="bar" style="animation-delay: 0s;"></div>
+            <div class="bar" style="animation-delay: 0.1s;"></div>
+            <div class="bar" style="animation-delay: 0.2s;"></div>
+            <div class="bar" style="animation-delay: 0.3s;"></div>
+            <div class="bar" style="animation-delay: 0.4s;"></div>
+            <div class="bar" style="animation-delay: 0.5s;"></div>
+            <div class="bar" style="animation-delay: 0.6s;"></div>
+        </div>
+    </div>
+    <script>
+        const audio = document.getElementById('audio');
+        const equalizer = document.getElementById('equalizer');
+        const bars = equalizer.getElementsByClassName('bar');
+        const loader = document.getElementById('loader');
 
-<h1>Lab Interface with Media Player and Tuners</h1>
-<div id="lab-container" class="lab-container"></div>
-<button class="sync-button" onclick="syncTuners()">Sync Tuners</button>
+        function playAudio() {
+            audio.play();
+            updateEqualizer();
+        }
 
-<div>
-    <video class="media-player" id="video-player" controls loop></video>
-    <audio class="media-player" id="audio-player" controls loop></audio>
-</div>
+        function pauseAudio() {
+            audio.pause();
+        }
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/antd/4.16.13/antd.min.js"></script>
-<script>
-    // Initialize tuners
-    let tuners = {};
-
-    // Load tuners from localStorage
-    function loadTuners() {
-        const storedTuners = localStorage.getItem('tuners');
-        if (storedTuners) {
-            tuners = JSON.parse(storedTuners);
-        } else {
-            for (let i = 1; i <= 10000; i++) {
-                tuners[`tuner${i}`] = { video: '', audio: '' };
+        function updateEqualizer() {
+            const array = new Uint8Array(bars.length);
+            for (let i = 0; i < bars.length; i++) {
+                array[i] = Math.random() * 255;
+                bars[i].style.height = array[i] + 'px';
+            }
+            if (!audio.paused) {
+                requestAnimationFrame(updateEqualizer);
             }
         }
-    }
 
-    // Save tuners to localStorage
-    function saveTuners() {
-        localStorage.setItem('tuners', JSON.stringify(tuners));
-    }
-
-    // Function to create and inject tuner elements
-    function createAndInjectTuners() {
-        const container = document.getElementById('lab-container');
-        for (let i = 1; i <= 10000; i++) {
-            const tunerContainer = document.createElement('div');
-            tunerContainer.className = 'tuner-container';
-
-            const label = document.createElement('div');
-            label.innerText = `Tuner ${i}`;
-
-            const videoInput = document.createElement('input');
-            videoInput.type = 'text';
-            videoInput.placeholder = 'Video URL';
-            videoInput.value = tuners[`tuner${i}`].video;
-            videoInput.onchange = (event) => {
-                tuners[`tuner${i}`].video = event.target.value;
-                saveTuners();
-            };
-
-            const audioInput = document.createElement('input');
-            audioInput.type = 'text';
-            audioInput.placeholder = 'Audio URL';
-            audioInput.value = tuners[`tuner${i}`].audio;
-            audioInput.onchange = (event) => {
-                tuners[`tuner${i}`].audio = event.target.value;
-                saveTuners();
-            };
-
-            const updateButton = document.createElement('button');
-            updateButton.className = 'tuner-button';
-            updateButton.innerText = 'Update Media';
-            updateButton.onclick = () => updateMediaPlayer(i);
-
-            tunerContainer.appendChild(label);
-            tunerContainer.appendChild(videoInput);
-            tunerContainer.appendChild(audioInput);
-            tunerContainer.appendChild(updateButton);
-
-            container.appendChild(tunerContainer);
+        function handleFiles(files) {
+            loader.style.display = 'block';
+            setTimeout(() => {
+                loader.style.display = 'none';
+                const file = files[0];
+                const url = URL.createObjectURL(file);
+                audio.src = url;
+                playAudio();
+                saveToLocalDB(file);
+            }, 1000);
         }
-    }
 
-    // Function to update the media player with selected tuner's media
-    function updateMediaPlayer(index) {
-        const videoPlayer = document.getElementById('video-player');
-        const audioPlayer = document.getElementById('audio-player');
-        videoPlayer.src = tuners[`tuner${index}`].video;
-        audioPlayer.src = tuners[`tuner${index}`].audio;
-    }
+        function saveToLocalDB(file) {
+            const dbRequest = indexedDB.open('SEVEN_DB', 1);
 
-    // Function to sync tuners and log JSON
-    function syncTuners() {
-        const jsonString = JSON.stringify(tuners, null, 2);
-        console.log('Synchronized Tuners:', jsonString);
-        alert('Tuners synchronized! Check the console for the JSON.');
-    }
+            dbRequest.onupgradeneeded = function(event) {
+                const db = event.target.result;
+                db.createObjectStore('files', { keyPath: 'name' });
+            };
 
-    // Initialize the UI with 10,000 tuner elements
-    loadTuners();
-    createAndInjectTuners();
-</script>
+            dbRequest.onsuccess = function(event) {
+                const db = event.target.result;
+                const transaction = db.transaction(['files'], 'readwrite');
+                const store = transaction.objectStore('files');
+                store.put({ name: file.name, data: file });
 
+                transaction.oncomplete = function() {
+                    console.log('File saved to local DB.');
+                };
+            };
+
+            dbRequest.onerror = function(event) {
+                console.error('Database error:', event.target.errorCode);
+            };
+        }
+    </script>
 </body>
 </html>
